--- a/appCore/ui/src/main/res/values/styles.xml
+++ b/appCore/ui/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowDisablePreview">true</item>
         <!-- App Font -->
-        <item name="fontFamily">@font/kamashka_regular</item>
+        <item name="fontFamily">@font/cairo</item>
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowActionBarOverlay">true</item>
     </style>
@@ -24,105 +24,105 @@
     <style name="TextBoldFont14">
         <item name="android:textSize">@dimen/text_size14</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">@font/kamashka_semi_bold</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
     <style name="TextBoldFont16">
         <item name="android:textSize">@dimen/text_size16</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">@font/kamashka_semi_bold</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
     <style name="TextBoldFont18">
         <item name="android:textSize">@dimen/text_size18</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">@font/kamashka_semi_bold</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
     <style name="TextBoldFont20">
         <item name="android:textSize">@dimen/text_size20</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">@font/kamashka_semi_bold</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
     <style name="TextBoldFont22">
         <item name="android:textSize">@dimen/text_size22</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">@font/kamashka_semi_bold</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
 
     <style name="TextBoldFont30">
         <item name="android:textSize">@dimen/text_size30</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">@font/kamashka_semi_bold</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
     <style name="TextMediumFont12">
         <item name="android:textSize">@dimen/text_size12</item>
-        <item name="fontFamily">@font/kamashka_medium</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
     <style name="TextMediumFont14">
         <item name="android:textSize">@dimen/text_size14</item>
-        <item name="fontFamily">@font/kamashka_medium</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
     <style name="TextMediumFont15">
         <item name="android:textSize">@dimen/text_size15</item>
-        <item name="fontFamily">@font/kamashka_medium</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
     <style name="TextMediumFont16">
         <item name="android:textSize">@dimen/text_size16</item>
-        <item name="fontFamily">@font/kamashka_medium</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
     <style name="TextMediumFont18">
         <item name="android:textSize">@dimen/text_size18</item>
-        <item name="fontFamily">@font/kamashka_medium</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
     <style name="TextMediumFont20">
         <item name="android:textSize">@dimen/text_size20</item>
-        <item name="fontFamily">@font/kamashka_medium</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
     <style name="TextMediumFont22">
         <item name="android:textSize">@dimen/text_size22</item>
-        <item name="fontFamily">@font/kamashka_medium</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
 
     <style name="TextRegularFont12">
         <item name="android:textSize">@dimen/text_size12</item>
-        <item name="fontFamily">@font/kamashka_regular</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
     <style name="TextRegularFont14">
         <item name="android:textSize">@dimen/text_size14</item>
-        <item name="fontFamily">@font/kamashka_regular</item>
+        <item name="fontFamily">@font/cairo</item>
     </style>
 
     <style name="TextRegularFont22">
         <item name="android:textSize">@dimen/text_size22</item>
-        <item name="fontFamily">@font/kamashka_regular</item>
+        <item name="fontFamily">@font/cairo</item>
     </style>
 
     <style name="TextMediumFont24">
         <item name="android:textSize">@dimen/text_size24</item>
-        <item name="fontFamily">@font/kamashka_medium</item>
+        <item name="fontFamily">@font/cairo</item>
     </style>
 
     <style name="TextMediumFont30">
         <item name="android:textSize">@dimen/text_size30</item>
-        <item name="fontFamily">@font/kamashka_medium</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
     </style>
 
     <style name="PrimaryButtonStyle" parent="Widget.MaterialComponents.Button">
         <item name="background">@color/color_app_second</item>
         <item name="android:textSize">@dimen/text_size18</item>
-        <item name="fontFamily">@font/kamashka_medium</item>
+        <item name="fontFamily">@font/cairo_semibold</item>
         <item name="cornerRadius">@dimen/dimen10</item>
         <item name="android:padding">@dimen/dimen12</item>
     </style>
@@ -132,5 +132,36 @@
         <item name="android:windowMinWidthMinor">100%</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
+    <style name="TextInputDropdownLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+        <item name="boxStrokeColor">@color/color_app_second</item>
+        <item name="boxStrokeWidth">@dimen/dimen1</item>
+        <item name="boxBackgroundColor">@color/white</item>
+        <item name="hintTextColor">@color/color_medium_grey</item>
+        <item name="android:textColorHint">@color/color_medium_grey</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/dimen10</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/dimen10</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/dimen10</item>
+        <item name="boxCornerRadiusTopStart">@dimen/dimen10</item>
+        <item name="android:paddingTop">@dimen/dimen10</item>
+        <item name="android:paddingBottom">@dimen/dimen10</item>
+        <item name="errorEnabled">false</item>
+    </style>
+
+    <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxStrokeColor">@color/edit_text_status_color</item>
+        <item name="boxStrokeWidth">1.5dp</item>
+        <item name="boxBackgroundColor">@color/white</item>
+        <item name="boxStrokeErrorColor">@color/color_red_text</item>
+        <item name="errorIconDrawable">@null</item>
+        <item name="hintTextColor">@color/edit_text_status_color</item>
+        <item name="errorTextColor">@color/color_red_text</item>
+        <item name="android:textColorHint">@color/edit_text_status_color</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/dimen10</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/dimen10</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/dimen10</item>
+        <item name="boxCornerRadiusTopStart">@dimen/dimen10</item>
+        <item name="errorEnabled">false</item>
     </style>
 </resources>
