--- a/app/src/main/res/layout/fragment_currency_converter.xml
+++ b/app/src/main/res/layout/fragment_currency_converter.xml
@@ -88,7 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/from_amount"
-            android:inputType="textPassword" />
+            android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -108,7 +108,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/to_amount"
-            android:inputType="textPassword" />
+            android:enabled="false"
+            android:focusable="false"
+            android:inputType="numberDecimal" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
